--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>KSA States Dresses - By The Salhiah High School</title>
@@ -60,12 +60,15 @@
     <div class="w3-container">
         <h2>The Saudi Traditional Dresses Guide</h2>
         <p class="w3-large">Click on any State to see people traditional dresses of the state </p>
+        <p>
+            This Project made by <br />
+        </p>
     </div>
 
     <div class="w3-row w3-border">
         <div class="w3-container w3-half">
             <svg id="ksa_map"
-                 height="700"
+                 height="400"
                  version="1.1"
                  width="100%"
                  style="overflow: hidden; position: relative; left: -0.109375px;"
@@ -354,7 +357,7 @@
                            style="stroke:none;-webkit-tap-highlight-color:rgba(0, 0, 0, 0)"
                            id="tspan104">Makkah</tspan>
                 </text>
-                <g id="pinGroup" x="0" y="0" class="pin" style="display: none;"></g>
+                <g id="pinGroup" x="0" y="0" class="pin" style="display: none;"><image xlink:href="pin.png"></image></g>
 
             </svg>
 
@@ -494,11 +497,10 @@
 
         </div>
     </div>
-    <p>
-        This Project made by <br />
-        by Supervision of Mrs. <br />
-        Salhiah High school - jeddah .
-    </p>
+    <footer>
+
+    </footer>
+
     <script>
         // Get references to the SVG, state divs, and default div
         const svg = document.getElementById('ksa_map');
